BB-3803: Add featured products to index page - fixes on mobile

--- a/src/OroB2B/Bundle/ProductBundle/Resources/public/default/scss/components/featured-products/featured-products.scss
+++ b/src/OroB2B/Bundle/ProductBundle/Resources/public/default/scss/components/featured-products/featured-products.scss
@@ -2,6 +2,10 @@
     & .embedded-list {
         margin: 0 42px;
     }
+
+    & .embedded-list__item {
+        width: 25%;
+    }
 }
 
 @include breakpoint('mobile') {
@@ -18,6 +22,10 @@
             left: 0;
 
             width: 16px;
+        }
+
+        & .embedded-list__item {
+            width: 50%;
         }
     }
 }
